--- a/README
+++ b/README
@@ -5,6 +5,16 @@ It uses Nokia's QtBrowserPlugin, part of Qt Solutions
 
 Build instructions:
 
-cmake .
-make
-make install
+$ cmake .
+$ make
+$ make install
+
+Make sure that libokularplugin.so is in your mozilla/firefox plugins path
+
+e.g.
+$ mkdir -p ${HOME}/.mozilla/plugins
+$ ln -s /usr/lib/libokularplugin.so ${HOME}/.mozilla/plugins
+
+You'll need to make /usr/lib/libokularplugin.so point to the file
+which was installed by the make install step above.
+
