CMakeLists.txt:   - install .rc files into right directory ($KDE4_DATA_DIR)
README:
  - Build instructions updated: Seperate build from source

partwin.ccp, partin.h:
  - fixed focus problem
  - disable menubar (we don't want this in a browser plugin...)
  - use own toolbar settings for okularplugin. Changing the toolbar at
    the plugin does no longer change settings for the okular executable!

okularpluginui.rc
  - GUI settings for the okular part
  - predefined toolbar settings suitable for browser plugin

okularplugin_okularui.rc
  - GUI settings for the plugin

--- a/README
+++ b/README
@@ -5,9 +5,11 @@ It uses Nokia's QtBrowserPlugin, part of Qt Solutions
 
 Build instructions:
 
-$ cmake .
+$ mkdir build
+$ cd build
+$ cmake ..
 $ make
-$ make install
+$ sudo make install
 
 Make sure that libokularplugin.so is in your mozilla/firefox plugins path
 
