README: Install instructions for Chrome added

--- a/README
+++ b/README
@@ -1,17 +1,38 @@
-This is a KParts-based Okular plugin designed to work as a Firefox
-compatible plugin.
+This is a KParts-based Okular plugin for NPAPI-compatible browsers.
+Tested Browsers are:
+  - Mozilla Firefox
+  - Google Chrome/Chromium
 
 It uses Nokia's QtBrowserPlugin, part of Qt Solutions
 
-Build instructions:
 
+-----------------------
+Build instructions
+-----------------------
+
+1. Requirements:
+================
+ - gcc
+ - automoc
+ - cmake
+
+
+2. Installation:
+================
 $ mkdir build
 $ cd build
 $ cmake ..
 $ make
 $ sudo make install
 
-Make sure that libokularplugin.so is in your mozilla/firefox plugins path
+
+3. Activate Plugin:
+===================
+To activate the plugin, make sure that libokularplugin.so is in your 
+browsers plugin path:
+
+Firefox
+-------
 
 for 32Bit systems:
 $ mkdir -p ${HOME}/.mozilla/plugins
@@ -21,6 +42,12 @@ for 64Bit systems:
 $ mkdir -p ${HOME}/.mozilla/plugins
 $ ln -s /usr/lib64/libokularplugin.so ${HOME}/.mozilla/plugins
 
-You'll need to make /usr/lib/libokularplugin.so point to the file
-which was installed by the make install step above.
+
+Chrome
+------
+for 32Bit systems:
+$ sudo ln -s /usr/lib/libokularplugin.so /usr/lib/chromium-browser/
+
+for 64Bit systems:
+$ sudo ln -s /usr/lib64/libokularplugin.so /usr/lib/chromium-browser/
 
